syntax = "proto3";

option csharp_namespace = "Neova.Basket.API.Protos";

package basket;

service BasketService {
  // Adds an item to the basket
  rpc AddItem (AddItemRequest) returns (BasketResponse);

  // Gets the basket for a user
  rpc GetBasket (GetBasketRequest) returns (BasketResponse);

  // Deletes the basket for a user
  rpc Update (UpdateBasketRequest) returns (BasketResponse);
}


message BasketItem{
	  string product_id = 1;
      int32 quantity = 2;
	  double price = 3;
	  string name = 4;
}


message AddItemRequest {
  string user_id = 1;
  BasketItem item = 2;
}

message BasketResponse {
  string user_id = 1;
  repeated BasketItem items = 2;
}

message GetBasketRequest {
  string user_id = 1;
}

message UpdateBasketRequest {
  string user_id = 1;
  repeated BasketItem items = 2;
}

